# pg-app-role-manager

./: ARCHIVE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  app-user-app-schema.sql
src/: cli.rs  db.rs  main.rs  report.rs  sql_templates.rs
src/commands/: add_mapping.rs  init.rs  list_mappings.rs  mod.rs  remove_mapping.rs
