[package]
name = "pg-app-role-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["runtime"] }
postgres_rustls = "0.1"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
